# AutoIND-Pro

./: README.md
ind-compliance-ai/: .env.example  .gitignore  README.md  main.py  pyproject.toml
ind-compliance-ai/agents/: agent_orchestrator.py  cmc_agent.py  regulatory_agent.py
ind-compliance-ai/api/: analysis_controller.py  main.py  response_formatter.py  upload_controller.py
ind-compliance-ai/config/: deployment.yaml  pdf_parser.toml  submission_profiles.yaml  system.yaml
ind-compliance-ai/core/: citation_resolver.py  compliance_evaluator.py  cross_module_checker.py  rule_engine.py  run_manager.py  version_manager.py
ind-compliance-ai/docs/: architecture.md  glossary.md  phase1_scope.md  regulatory_assumptions.md  threat_model.md
ind-compliance-ai/llm/: explanation_agent.py  llm_client.py  prompt_guard.py
ind-compliance-ai/llm/prompt_templates/: regulation_explain.prompt  risk_reason.prompt
ind-compliance-ai/output/: audit_log.json  compliance_result.json
ind-compliance-ai/parsers/: docx_parser.py  ectd_parser.py  parser_registry.py  pdf_parser.py  pptx_parser.py  xml_parser.py
ind-compliance-ai/parsers/common/: atomic_fact_extractor.py  layout_extractor.py  source_tagger.py
ind-compliance-ai/parsers/pdf/: __init__.py  image_blocks.py  layout.py  pipeline.py  (+6 more)
ind-compliance-ai/rag/: index_builder.py  reranker.py  retriever.py
ind-compliance-ai/rules/: exemption_rules.yaml  rule_metadata.yaml
ind-compliance-ai/schemas/: atomic_facts.yaml
ind-compliance-ai/scripts/: init_regulations.py  pdf_regression_report.py  validate_environment.py
(+46 files in other folders)
