[tool.poetry]
name = "ind-compliance-ai"
version = "0.1.0"
description = "Phase 1 scaffold for a China IND compliance assistant"
authors = ["IND Compliance Team <team@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
