[tool.poetry]
name = "ind-compliance-ai"
version = "0.1.0"
description = "Phase 1 scaffold for a China IND compliance assistant"
authors = ["IND Compliance Team <team@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
python-multipart = "^0.0.22"
pymupdf = "^1.27.1"
python-docx = "^1.2.0"
python-pptx = "^1.0.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
